--- a/templates/webui/available-requests.html
+++ b/templates/webui/available-requests.html
@@ -77,33 +77,33 @@
                         {% for req in requests %}
                             <div class="request-card">
                                 <div class="request-title">Название: {{ req.book_name }}</div>
-                                <div class="request-info">Пользователь: <a href="{% url 'public_profile' req.user.id %}">{{ req.user.username }}</a></div>
+                                <div class="request-info"><b>Пользователь:</b> <a href="{% url 'public_profile' req.user.id %}">{{ req.user.username }}</a></div>
 
                                 {% if req.user.profile.genres %}
                                     <div class="request-info">
-                                        Жанр: {{ req.user.profile.genres }}
+                                        <b>Жанр:</b> {{ req.user.profile.genres }}
                                     </div>
                                 {% endif %}
                                 {% if req.user.profile.subscribers_count %}
                                     <div class="request-info">
-                                        Подписчики: {{ req.user.profile.subscribers_count }}
+                                        <b>Подписчики:</b> {{ req.user.profile.subscribers_count }}
                                     </div>
                                 {% endif %}
 
                                 {% if req.user.profile.author_page_link %}
                                     <div class="request-info">
-                                      <a href="{{ req.user.profile.author_page_link }}" target="_blank" class="author-page-link-btn">Ссылка на книгу</a>
+                                      <a href="{{ req.user.profile.author_page_link }}" target="_blank" class="author-page-link-btn"><b>Ссылка на книгу</b></a>
                                     </div>
                                 {% endif %}
 
                                 <div class="request-info">
-                                    Дата старта: {{ req.start_date|date:"d.m.Y" }}
+                                    <b>Дата старта:</b> {{ req.start_date|date:"d.m.Y" }}
                                 </div>
                                 <div class="request-info">
-                                    Свободен с: {{ req.available_from|date:"d.m.Y" }} по {{ req.available_to|date:"d.m.Y" }}
+                                    <b>Свободен с:</b> {{ req.available_from|date:"d.m.Y" }} по {{ req.available_to|date:"d.m.Y" }}
                                 </div>
                                 <div class="request-info">
-                                    Дата подачи: {{ req.date_created|date:"d.m.Y" }}
+                                    <b>Дата подачи:</b> {{ req.date_created|date:"d.m.Y" }}
                                 </div>
 
                                 <div class="social-buttons separated">
