--- a/templates/webui/home.html
+++ b/templates/webui/home.html
@@ -3,6 +3,8 @@
 <head>
     {% load static %}
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Главная страница</title>
     <link rel="stylesheet" href="{% static 'styling/base.css' %}" />
     <link rel="stylesheet" href="{% static 'styling/layout.css' %}" />
